; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/fsl/qbman/extr_bman.c_bm_rcr_get_fill.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/fsl/qbman/extr_bman.c_bm_rcr_get_fill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bm_portal = type { %struct.bm_rcr }
%struct.bm_rcr = type { i32 }

@BM_RCR_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bm_portal*)* @bm_rcr_get_fill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bm_rcr_get_fill(%struct.bm_portal* %0) #0 {
  %2 = alloca %struct.bm_portal*, align 8
  %3 = alloca %struct.bm_rcr*, align 8
  store %struct.bm_portal* %0, %struct.bm_portal** %2, align 8
  %4 = load %struct.bm_portal*, %struct.bm_portal** %2, align 8
  %5 = getelementptr inbounds %struct.bm_portal, %struct.bm_portal* %4, i32 0, i32 0
  store %struct.bm_rcr* %5, %struct.bm_rcr** %3, align 8
  %6 = load i32, i32* @BM_RCR_SIZE, align 4
  %7 = sub nsw i32 %6, 1
  %8 = load %struct.bm_rcr*, %struct.bm_rcr** %3, align 8
  %9 = getelementptr inbounds %struct.bm_rcr, %struct.bm_rcr* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sub nsw i32 %7, %10
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
